gateway-yaml/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    labels:
      app: envoy-gateway
  # Only Routes from the same namespace are allowed.
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same  #or All or Selector
    
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "example-app.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: example-app-tls-secret
            namespace: envoy-gateway-system
      allowedRoutes:
        namespaces:
          from: Same
