gateway-yaml/03-httproute.yaml
# httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-app-go
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: gateway-api
  hostnames:
    - example-app.com
  rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: example-app-go-v1
#           port: 8080

# # rules section updated
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: example-app-go-v1
          port: 8080
          weight: 90
        - name: example-app-go-v2
          port: 8080
          weight: 10

# # Header-based routing (force canary for specific clients)
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#           headers:
#             - name: x-canary
#               value: "true"
#       backendRefs:
#         - name: example-app-go-v2
#           port: 8080
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - name: example-app-go-v1
#           port: 8080
#           weight: 90
#         - name: example-app-go-v2
#           port: 8080
#           weight: 10
# # httproute.yaml (two more rules)
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /old
#       filters:
#         - type: RequestRedirect
#           requestRedirect:
#             path:
#               type: ReplacePrefixMatch
#               replacePrefixMatch: /
#             statusCode: 301
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /v2
#       filters:
#         - type: URLRewrite
#           urlRewrite:
#             path:
#               type: ReplacePrefixMatch
#               replacePrefixMatch: /
#       backendRefs:
#         - name: example-app-go-v2
#           port: 8080
